--- a/styles.css
+++ b/styles.css
@@ -704,8 +704,8 @@ input[type="submit"]:hover {
   position: relative;
   text-align: center;
   align-content: center;
-  min-height: 109svh;
-  margin-top: calc(var(--header-height) * -1);
+  min-height: 100lvh;
+  /*! margin-top: calc(var(--header-height) * -1); */
   background-image:
     linear-gradient(rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.4)),
     url("images/MOON_GOLD_1.webp");
