--- a/styles.css
+++ b/styles.css
@@ -546,11 +546,11 @@ input[type="submit"]:hover {
     padding-bottom: 3rem;
   }
 
-#hero {
+  #hero {
 
-  background-attachment: scroll !important;
-  background-size: cover;
-}
+    background-attachment: scroll !important;
+    background-size: cover;
+  }
 
   .hamburger {
     display: flex;
@@ -1240,8 +1240,11 @@ footer {
 
 #collection-content {
   background-color: var(--color-olive-green-dark);
-  /*! max-width: 78%; */
-  /*! border-radius: var(--border-radius); */
+}
+
+#collection-content,
+#solution-content {
+
   overflow: hidden;
   transition: height .35s ease;
   margin-top: var(--spacing-base);
@@ -1455,7 +1458,6 @@ th {
 #items-container .category-item {
   position: relative;
   padding-bottom: 2rem;
-  /* jätä tilaa kuvakkeelle */
 }
 
 #items-container .category-icon {
@@ -1492,7 +1494,7 @@ p {
 
 
 #hero {
-  background-position: center bottom !important;
+  background-position: center center !important;
 
   background-size: cover;
 }
@@ -1500,4 +1502,14 @@ p {
 #hero {
   min-height: 100vh;
   min-height: 100svh !important;
+}
+
+#solution-content {
+  background-color: var(--color-light-beige);
+
+}
+
+#solution-content p {
+
+  color: var(--color-dark-charcoal) !important;
 }
